fix: serialization bugs in bidding context, fix bad interaction with ship24